add sorting to last few queries

--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -2,30 +2,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "ea2e7dd7-7f39-4978-81a5-fb1aca7113ee"
+        "outputId": "e60314cf-1302-4459-b15c-b4f4bc993f5b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com] [Connecting to security.ubuntu.com (185.125.190.36)] [Connecti\r                                                                                                    \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com (91.189.91.82)] [Waiting for headers] [Connecting to ppa.launch\r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "\r0% [Waiting for headers] [Waiting for headers] [Connecting to cloud.r-project.org (108.157.173.52)] \r                                                                                                    \rHit:2 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+            "\r                                                                                                    \rHit:3 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
+            "\r0% [Waiting for headers] [Connected to cloud.r-project.org (108.157.173.52)] [Connecting to ppa.laun\r                                                                                                    \rHit:4 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "\r0% [Connected to cloud.r-project.org (108.157.173.52)] [Connecting to ppa.launchpadcontent.net (185.\r                                                                                                    \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Hit:6 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
             "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
             "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
             "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
             "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Fetched 229 kB in 2s (151 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -56,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -72,13 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "953b6a8a-e4d8-4a06-a225-ed7b3a8b8228"
+        "outputId": "c1350e18-5880-4e29-e771-79ae807b6c14"
       },
       "outputs": [
         {
@@ -125,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -137,13 +136,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4eff55a-c37f-4879-946f-d1747f86ee32"
+        "outputId": "7eaf5217-119a-4c18-d230-8687d3ab8027"
       },
       "outputs": [
         {
@@ -172,13 +171,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 6,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "090cb2e5-bb94-4777-eead-922031b0f91a"
+        "outputId": "c4b21a47-d04f-4be4-8e9e-8fe144c2c73a"
       },
       "outputs": [
         {
@@ -212,13 +211,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb804099-1136-48f9-913b-403eac7ee7f2"
+        "outputId": "369e5505-afc7-4243-d582-0b2ce6c8ba24"
       },
       "outputs": [
         {
@@ -253,13 +252,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "8244a77a-95bb-4bca-8248-a7a2f85d251d"
+        "outputId": "36da9b13-0c97-4d9f-9d32-d9c9e3847880"
       },
       "outputs": [
         {
@@ -269,30 +268,30 @@
             "+----+--------------------+\n",
             "|view|round(avg(price), 2)|\n",
             "+----+--------------------+\n",
-            "|  51|           788128.21|\n",
-            "|  54|           798684.82|\n",
-            "|  69|           750537.94|\n",
-            "|  87|           1072285.2|\n",
-            "|  73|           752861.18|\n",
-            "|  64|           767036.67|\n",
-            "|  59|            791453.0|\n",
-            "|  85|          1056336.74|\n",
-            "|  52|           733780.26|\n",
-            "|  71|            775651.1|\n",
-            "|  98|          1053739.33|\n",
             "|  99|          1061201.42|\n",
+            "|  98|          1053739.33|\n",
+            "|  97|          1129040.15|\n",
             "|  96|          1017815.92|\n",
-            "| 100|           1026669.5|\n",
-            "|  70|           695865.58|\n",
-            "|  61|           746877.59|\n",
-            "|  75|          1114042.94|\n",
-            "|  78|          1080649.37|\n",
+            "|  95|           1054325.6|\n",
+            "|  94|           1033536.2|\n",
+            "|  93|          1026006.06|\n",
+            "|  92|           970402.55|\n",
+            "|  91|          1137372.73|\n",
+            "|  90|          1062654.16|\n",
             "|  89|          1107839.15|\n",
-            "|  77|          1076205.56|\n",
+            "|  88|          1031719.35|\n",
+            "|  87|           1072285.2|\n",
+            "|  86|          1070444.25|\n",
+            "|  85|          1056336.74|\n",
+            "|  84|          1117233.13|\n",
+            "|  83|          1033965.93|\n",
+            "|  82|           1063498.0|\n",
+            "|  81|          1053472.79|\n",
+            "|  80|           991767.38|\n",
             "+----+--------------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.7506043910980225 seconds ---\n"
+            "1.8096702098846436\n"
           ]
         }
       ],
@@ -306,21 +305,21 @@
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price),2)\n",
         "            FROM home_sales\n",
         "            GROUP BY view\n",
-        "            HAVING ROUND(AVG(price),2) >= 350000\"\"\").show()\n",
+        "            HAVING ROUND(AVG(price),2) >= 350000 ORDER BY view DESC\"\"\").show()\n",
         "\n",
         "\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+        "print(\"%s\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3917ff81-9d0c-45e9-e45d-61ac440ea2ef"
+        "outputId": "42a546bb-b0b8-433e-f430-979f48347063"
       },
       "outputs": [
         {
@@ -331,7 +330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 9
         }
       ],
       "source": [
@@ -341,13 +340,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7afca63-751f-4da3-9a13-02e6782700d5"
+        "outputId": "23268863-d862-4017-bf5f-473a273c249f"
       },
       "outputs": [
         {
@@ -358,7 +357,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 10
         }
       ],
       "source": [
@@ -368,13 +367,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
+      "metadata": {
+        "id": "Qm12WN9isHBR"
+      },
+      "outputs": [],
+      "source": [
+        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n",
+        "df.write.parquet('home_parquet', mode='overwrite')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "10298c36-1a49-404e-d097-b0176fc6a165"
+        "outputId": "86ad7395-1a3d-4cb5-9d43-f715840badf0"
       },
       "outputs": [
         {
@@ -384,30 +395,30 @@
             "+----+--------------------+\n",
             "|view|round(avg(price), 2)|\n",
             "+----+--------------------+\n",
-            "|  51|           788128.21|\n",
-            "|  54|           798684.82|\n",
-            "|  69|           750537.94|\n",
-            "|  87|           1072285.2|\n",
-            "|  73|           752861.18|\n",
-            "|  64|           767036.67|\n",
-            "|  59|            791453.0|\n",
-            "|  85|          1056336.74|\n",
-            "|  52|           733780.26|\n",
-            "|  71|            775651.1|\n",
-            "|  98|          1053739.33|\n",
             "|  99|          1061201.42|\n",
+            "|  98|          1053739.33|\n",
+            "|  97|          1129040.15|\n",
             "|  96|          1017815.92|\n",
-            "| 100|           1026669.5|\n",
-            "|  70|           695865.58|\n",
-            "|  61|           746877.59|\n",
-            "|  75|          1114042.94|\n",
-            "|  78|          1080649.37|\n",
+            "|  95|           1054325.6|\n",
+            "|  94|           1033536.2|\n",
+            "|  93|          1026006.06|\n",
+            "|  92|           970402.55|\n",
+            "|  91|          1137372.73|\n",
+            "|  90|          1062654.16|\n",
             "|  89|          1107839.15|\n",
-            "|  77|          1076205.56|\n",
+            "|  88|          1031719.35|\n",
+            "|  87|           1072285.2|\n",
+            "|  86|          1070444.25|\n",
+            "|  85|          1056336.74|\n",
+            "|  84|          1117233.13|\n",
+            "|  83|          1033965.93|\n",
+            "|  82|           1063498.0|\n",
+            "|  81|          1053472.79|\n",
+            "|  80|           991767.38|\n",
             "+----+--------------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.48444390296936035 seconds ---\n"
+            "0.5610759258270264\n"
           ]
         }
       ],
@@ -422,26 +433,14 @@
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price),2)\n",
         "            FROM home_sales\n",
         "            GROUP BY view\n",
-        "            HAVING ROUND(AVG(price),2) >= 350000\"\"\").show()\n",
+        "            HAVING ROUND(AVG(price),2) >= 350000 ORDER BY view DESC\"\"\").show()\n",
         "\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
+        "print(\"%s\" % (time.time() - start_time))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {
-        "id": "Qm12WN9isHBR"
-      },
-      "outputs": [],
-      "source": [
-        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n",
-        "df.write.parquet('home_parquet', mode='overwrite')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 13,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -453,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 14,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -465,13 +464,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "6a5fe1c9-039f-4664-cc85-f9fc6bd5f324"
+        "outputId": "8ea55796-6ff9-49e2-fe86-383b5a4a1f91"
       },
       "outputs": [
         {
@@ -481,30 +480,30 @@
             "+----+--------------------+\n",
             "|view|round(avg(price), 2)|\n",
             "+----+--------------------+\n",
-            "|  51|           788128.21|\n",
-            "|  54|           798684.82|\n",
-            "|  69|           750537.94|\n",
-            "|  87|           1072285.2|\n",
-            "|  73|           752861.18|\n",
-            "|  64|           767036.67|\n",
-            "|  59|            791453.0|\n",
-            "|  85|          1056336.74|\n",
-            "|  52|           733780.26|\n",
-            "|  71|            775651.1|\n",
-            "|  98|          1053739.33|\n",
             "|  99|          1061201.42|\n",
+            "|  98|          1053739.33|\n",
+            "|  97|          1129040.15|\n",
             "|  96|          1017815.92|\n",
-            "| 100|           1026669.5|\n",
-            "|  70|           695865.58|\n",
-            "|  61|           746877.59|\n",
-            "|  75|          1114042.94|\n",
-            "|  78|          1080649.37|\n",
+            "|  95|           1054325.6|\n",
+            "|  94|           1033536.2|\n",
+            "|  93|          1026006.06|\n",
+            "|  92|           970402.55|\n",
+            "|  91|          1137372.73|\n",
+            "|  90|          1062654.16|\n",
             "|  89|          1107839.15|\n",
-            "|  77|          1076205.56|\n",
+            "|  88|          1031719.35|\n",
+            "|  87|           1072285.2|\n",
+            "|  86|          1070444.25|\n",
+            "|  85|          1056336.74|\n",
+            "|  84|          1117233.13|\n",
+            "|  83|          1033965.93|\n",
+            "|  82|           1063498.0|\n",
+            "|  81|          1053472.79|\n",
+            "|  80|           991767.38|\n",
             "+----+--------------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.7201964855194092 seconds ---\n"
+            "0.7294909954071045\n"
           ]
         }
       ],
@@ -519,21 +518,21 @@
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price),2)\n",
         "            FROM temp_parquet\n",
         "            GROUP BY view\n",
-        "            HAVING ROUND(AVG(price),2) >= 350000\"\"\").show()\n",
+        "            HAVING ROUND(AVG(price),2) >= 350000 ORDER BY view DESC\"\"\").show()\n",
         "\n",
         "\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+        "print(\"%s\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 16,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff6a55a6-ac7e-43be-b717-c28845546efe"
+        "outputId": "46b00864-477c-4c78-cfe1-e6ac886ed8f4"
       },
       "outputs": [
         {
@@ -544,7 +543,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 16
         }
       ],
       "source": [
@@ -554,13 +553,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 17,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d81bad6-6ff4-4385-cdb3-4627394958eb"
+        "outputId": "01258ca0-721a-4e37-880e-200da4f6bbd5"
       },
       "outputs": [
         {
@@ -571,7 +570,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 17
         }
       ],
       "source": [
@@ -581,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "Si-BNruRUGK3"
       },
